gcc/testsuite/gm2/errors/fail/badhigh.mod
MODULE badhigh;
VAR
    i, high : CARDINAL;
BEGIN
    high := 10;
    WHILE i < HIGH DO
        INC(i);
    END;
END badhigh.